vitrail-sqlite-macros/tests/ui/fail/decimal.stderr
error: `Decimal` fields are not supported by the SQLite dialect because SQLite does not provide a native exact arbitrary-precision decimal storage class
  --> tests/ui/fail/decimal.rs:10:17
   |
10 |         balance Decimal
   |                 ^^^^^^^
